experimente4/baselineS_Lr1
Traceback (most recent call last):
  File "main.py", line 32, in <module>
    from src import n2n
  File "/home/jessica.buehler/MA_Source/src/n2n.py", line 487
    def wider(self, al bei den Eisdelta_width, weight_norm=True, random_init=True,
                         ^
SyntaxError: invalid syntax
